<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

   <androidx.appcompat.widget.Toolbar
       android:id="@+id/toolbars"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:background="@color/teal_700">
       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/pdf"
           android:textAlignment="center"
           android:textSize="30sp"
           android:textStyle="bold"
           android:textColor="@color/black"/>
   </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbars"
        android:layout_marginTop="20dp"
        android:padding="20dp"
        android:layout_margin="20dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nama_lengkap"
            android:textSize="20sp"
            android:textColor="@color/black"/>
        <EditText
            android:id="@+id/editTextNama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nama_lengkap"
            android:textColorHint="@color/black"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:background="@drawable/rounder_text"
            android:layout_marginTop="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/alamat"
            android:layout_marginTop="15dp"
            android:textSize="20sp"
            android:textColor="@color/black"/>
        <EditText
            android:id="@+id/editTextAlamat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/alamat"
            android:textColorHint="@color/black"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:background="@drawable/rounder_text"
            android:layout_marginTop="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ttl"
            android:layout_marginTop="15dp"
            android:textSize="20sp"
            android:textColor="@color/black"/>
        <EditText
            android:id="@+id/editTextTtl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ttl"
            android:textColorHint="@color/black"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:background="@drawable/rounder_text"
            android:layout_marginTop="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:layout_marginTop="15dp"
            android:textSize="20sp"
            android:textColor="@color/black"/>
        <EditText
            android:id="@+id/editTextPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone"
            android:textColorHint="@color/black"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:background="@drawable/rounder_text"
            android:layout_marginTop="10dp"/>
        <Button
            android:id="@+id/generatePDF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_rounder"
            android:text="@string/generate"
            android:textSize="20sp"
            android:textColor="@android:color/background_dark"
            android:textStyle="bold"/>
    </LinearLayout>
</RelativeLayout>